corrected logedIn profile on smaller screen

--- a/src/App.css
+++ b/src/App.css
@@ -208,6 +208,15 @@ p.danger {
   width: 50px;
   height: 50px;
 }
+@media (max-width: 767px) {
+  .user-profile {
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0);
+    align-self: flex-start;
+    /* position: absolute; */
+  }
+}
 .form-fields {
   display: flex;
   justify-content: center;
